faq page initial

--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
   </head>
   <body>
     <div class="container">
-      <div class="coming-soon">COMING SOON</div>
 
-      <div class="main-title">Think. Create. Inspire.</div>
       <div class="logo">
         <img src="logo.png" alt="Hive of Thinkrs" />
       </div>
-
-      <div class="footer-text">
-        Our website is under construction, in the meantime visit us at
-        <a href="https://ZaniacSTEAM.com" target="_blank">ZaniacSTEAM.com</a>
+            
+      <div class="nav-buttons">
+        <a href="faq.html" class="faq-button">View FAQ</a>
       </div>
     </div>
   </body>
