faq button text change

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
             
       <div class="nav-buttons">
-        <a href="faq.html" class="faq-button">View FAQ</a>
+        <a href="faq.html" class="faq-button">FAQ Page</a>
       </div>
     </div>
   </body>
