more faqs added

--- a/faq.html
+++ b/faq.html
@@ -417,16 +417,28 @@
           icon: "📚",
           questions: [
             {
-              q: "What age groups do you serve at Hive of Thinkrs?",
-              a: "We serve K-12 students from ages 5 through 18. Our programs are designed with age-appropriate curriculum and activities for elementary, middle, and high school students."
+              q: "What is Hive of Thinkrs?",
+              a: "Hive of Thinkrs is a creative learning lab where students from Kindergarten through 12th grade explore science, coding, math, and design through game-based, hands-on learning. Our programs help kids build real-world skills, confidence, and curiosity that last a lifetime. We also do Test Preparation for standardized, private school and college admissions tests such as SAT, ACT, SSAT and ISEE."
             },
             {
-              q: "Where are your STEM programs located in Miami?",
-              a: "We offer programs throughout Miami-Dade County. Our main location serves the Miami area, and we also partner with local schools for in-school programs. Contact us to find the nearest location to you."
+              q: "How is Hive of Thinkrs different from other tutoring or STEAM programs?",
+              a: "We're not worksheets and lectures. We're invention, play, and problem-solving. Every lesson blends fun and learning — whether students are programming a robot, crafting a digital game, or leveling up in algebra."
             },
             {
-              q: "What types of STEM programs do you offer?",
-              a: "We offer comprehensive STEM programs including: Coding (Python, JavaScript, web development), Robotics, Engineering, Minecraft Education, Math Enrichment, Art & Design, and Test Prep (SAT, ACT, ISEE, SSAT). Programs are available as after-school classes, in-school partnerships, summer camps, and private tutoring."
+              q: "Do you offer online or in-person classes?",
+              a: "Both. We offer flexible options to meet your family's needs — in-person at home or at one of our partner locations, or fully online with interactive tools like stylus tablets and digital dashboards."
+            },
+            {
+              q: "What ages or grades do you serve?",
+              a: "We support students from Kindergarten to 12th grade across all academic levels — from early reading to college admissions."
+            },
+            {
+              q: "What kinds of programs do you offer?",
+              a: "Our core offerings include: STEAM Enrichment (Coding, Robotics, 3D Design, Game Development), Academic Tutoring (Math, Reading, Writing, Science), Test Prep (ISEE, SSAT, SAT, ACT), Study Smart (Executive Functioning & Time Management)"
+            },
+            {
+              q: "Where are your STEM programs located?",
+              a: "We offer programs throughout South Florida's tri-county area, including Miami-Dade, Broward, and Palm Beach counties"
             }
           ]
         },
@@ -461,8 +473,8 @@
               a: "Yes, unless we have communicated a change in advance. If you are unsure, feel free to check with us."
             },
             {
-              q: "What days and times is the tutor available?",
-              a: "Tutor availability depends on the specific tutor and their current schedule. During the last week of each month, we reach out to confirm availability and finalize the schedule for the following month."
+              q: "What days and times is tutor available?",
+              a: "Tutor availability depends on specific tutor and their current schedule. During the last week of each month, we reach out to confirm availability and finalize the schedule for the following month."
             },
             {
               q: "How do we choose or confirm the tutoring schedule?",
@@ -487,7 +499,7 @@
               a: "A minimum of 24 hours' notice is required. Requests made with less notice are considered same-day cancellations."
             },
             {
-              q: "What happens if we cancel the same day?",
+              q: "What happens if we cancel same day?",
               a: "Sessions canceled with less than 24 hours' notice are still charged, as the tutor has already reserved that time."
             },
             {
@@ -531,6 +543,18 @@
           icon: "🔬",
           questions: [
             {
+              q: "How does your Test Prep work?",
+              a: "We start with a diagnostic and build a personalized plan based on each student's goals. Our approach includes subject-specific tutoring, homework, vocabulary training, and proctored practice tests. Students typically improve their SAT score by 200+ points and ACT by 7–10 points."
+            },
+            {
+              q: "Do you provide practice tests?",
+              a: "Yes. We run monthly proctored SAT, ACT, ISEE, and SSAT practice exams to simulate real test conditions and adjust learning plans accordingly."
+            },
+            {
+              q: "Who are your instructors?",
+              a: "Our team includes experienced, background-checked professionals with STEM or education degrees. Many also teach advanced learners during the school year at top schools in Miami."
+            },
+            {
               q: "What is your student-to-teacher ratio?",
               a: "We maintain small class sizes with a maximum of 8:1 student-to-teacher ratio for most programs. This ensures personalized attention and hands-on learning for every student."
             },
@@ -545,6 +569,24 @@
             {
               q: "What equipment or materials do students need?",
               a: "We provide all necessary equipment and materials for in-person programs, including computers, robotics kits, and software. For online programs, we provide a list of required materials and help parents set up the necessary software at home."
+            }
+          ]
+        },
+        {
+          title: "School Partnerships",
+          icon: "🏫",
+          questions: [
+            {
+              q: "What types of after-school programs can we bring to our school?",
+              a: "We offer custom STEAM and academic programs for K–12. From robotics and coding to creative design and executive functioning, our after-school options are hands-on, turnkey, and beloved by students."
+            },
+            {
+              q: "Do you provide instructors and materials?",
+              a: "Yes. We handle the full experience — instructors, curriculum, tech materials, and student engagement. Think of us as your enrichment partner, not just a vendor."
+            },
+            {
+              q: "What's the first step to bring Hive of Thinkrs to our school?",
+              a: "Reach out to us at yourhive@beathinkr.com or call 305-668-0605. We'll start with a discovery consultation to understand your needs and design a custom plan for your community."
             }
           ]
         },
@@ -570,6 +612,10 @@
           title: "Getting Started",
           icon: "🚀",
           questions: [
+            {
+              q: "How do I enroll my child?",
+              a: "Click here and fill out the form. We'll set up a brief call to match you with the right program and instructor."
+            },
             {
               q: "How do I enroll my child in a program?",
               a: "Enrollment is easy! You can start by filling out our online request form on our website, calling us at (305) 668-0605, or visiting our center. We'll help you choose the right program and complete the registration process."
