faq page updated

--- a/faq.html
+++ b/faq.html
@@ -44,7 +44,6 @@
         color: #333;
         text-align: left;
         padding: 40px 20px;
-        margin-bottom: 40px;
       }
       
       .faq-hero h1 {
@@ -405,12 +404,16 @@
         <h2>Still Have Questions?</h2>
         <p>We're here to help! Contact our team and we'll be happy to answer any additional questions you may have.</p>
         <div class="cta-buttons">
-          <a href="mailto:info@beathinkr.com" class="btn btn-primary">Email Us</a>
-          <a href="tel:305-668-0605" class="btn btn-secondary">Call (305) 668-0605</a>
+          <a href="mailto:info@beathinkr.com" class="btn btn-primary" style="display: inline-flex; align-items: center; justify-content: center;">
+            <img src="faq/email.png" alt="Email" style="width: 18px; height: 18px; margin-right: 8px; flex-shrink: 0;">
+            Email Us
+          </a>
+          <a href="tel:305-668-0605" class="btn btn-secondary" style="display: inline-flex; align-items: center; justify-content: center;">
+            <img src="faq/call.png" alt="Phone" style="width: 20px; height: 20px; margin-right: 8px; flex-shrink: 0;">
+            Call (305) 668-0605
+          </a>
           <a href="https://wa.me/message/H52TVCMGLEIUB1" class="btn btn-tertiary" target="_blank" style="padding-left: 24px; padding-right: 24px; min-width: 140px; display: inline-flex; align-items: center; justify-content: center;">
-            <svg width="18" height="18" fill="currentColor" viewBox="0 0 24 24" style="margin-right: 8px; flex-shrink: 0;">
-              <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.149-.67.149-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414-.074-.123-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 9.89-5.335 9.89-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
-            </svg>
+            <img src="faq/whatsapp-white-icon.png" alt="WhatsApp" style="width: 18px; height: 18px; margin-right: 8px; flex-shrink: 0;">
             WhatsApp
           </a>
         </div>
@@ -430,7 +433,7 @@
             </div>
             <h3>Program Guide</h3>
             <p>Download our complete program guide with detailed curriculum information</p>
-            <a href="#guide" class="resource-link link-purple">Download PDF →</a>
+            <a href="faq/Hive of Thinkers Brochure B2C.pdf" class="resource-link link-purple" target="_blank">Download PDF →</a>
           </div>
           <div class="resource-card">
             <div class="resource-icon blue">
@@ -438,19 +441,17 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
               </svg>
             </div>
-            <h3>Schedule a Tour</h3>
+            <h3>Schedule a Consultation</h3>
             <p>Visit our facility and see our programs in action</p>
-            <a href="#tour" class="resource-link link-blue">Schedule Visit →</a>
+            <a href="https://www.beathinkr.com/request/parents" class="resource-link link-blue" target="_blank">Schedule a Consultation →</a>
           </div>
           <div class="resource-card">
             <div class="resource-icon pink">
-              <svg width="32" height="32" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" />
-              </svg>
+              <img src="faq/fa6e4c3b-5163-44c2-8aef-1cf5c0eacb19_removalai_preview.png" alt="Hive of Thinkrs Experience" style="width: 90%; height: 90%; object-fit: cover; border-radius: 50%;">
             </div>
-            <h3>Parent Portal</h3>
-            <p>Access your child's progress, schedules, and updates</p>
-            <a href="#portal" class="resource-link link-pink">Login to Portal →</a>
+            <h3>The Hive of Thinkrs Experience</h3>
+            <p>Explore what STEAM learning looks like inside a Hive of Thinkrs classroom</p>
+            <a href="https://www.beathinkr.com/experience/art" target="_blank" class="resource-link link-pink">Explore Experience Images →</a>
           </div>
         </div>
       </div>
@@ -489,32 +490,32 @@
             },
             {
               q: "How do I enroll my child?",
-              a: "Click here and fill out the form. We'll set up a brief call to match you with the right program and instructor."
+              a: "Click <a href=\"https://www.beathinkr.com/request/parents\" target=\"_blank\" style=\"color: #7140FF; text-decoration: underline;\">here</a> and fill out the form. We'll set up a brief call to match you with the right program and instructor."
             },
           ]
         },
-        {
-          title: "Enrollment & Pricing",
-          icon: "💰",
-          questions: [
-            {
-              q: "How much do your programs cost?",
-              a: "Our pricing varies by program type and duration. After-school programs typically range from $150-300 per month, summer camps are $300-500 per week, and private tutoring starts at $60 per hour. We offer sibling discounts and payment plans. Contact us for specific program pricing."
-            },
-            {
-              q: "Do you offer free trials or demo classes?",
-              a: "Yes! We offer free trial classes for new students to experience our teaching style and curriculum. Contact us to schedule a trial class for your child."
-            },
-            {
-              q: "Do you offer scholarships or financial aid?",
-              a: "We believe every child deserves access to quality STEM education. We offer limited scholarships and financial aid based on need and availability. Contact us to learn more about our financial assistance programs."
-            },
-            {
-              q: "What is your cancellation policy?",
-              a: "We offer flexible cancellation policies. For after-school programs, we require 30 days notice. For summer camps, cancellations made 14 days before start receive a full refund minus a $50 processing fee. For private tutoring, 24 hours' notice is required for cancellations or rescheduling."
-            }
-          ]
-        },
+        // {
+        //   title: "Enrollment & Pricing",
+        //   icon: "💰",
+        //   questions: [
+        //     {
+        //       q: "How much do your programs cost?",
+        //       a: "Our pricing varies by program type and duration. After-school programs typically range from $150-300 per month, summer camps are $300-500 per week, and private tutoring starts at $60 per hour. We offer sibling discounts and payment plans. Contact us for specific program pricing."
+        //     },
+        //     {
+        //       q: "Do you offer free trials or demo classes?",
+        //       a: "Yes! We offer free trial classes for new students to experience our teaching style and curriculum. Contact us to schedule a trial class for your child."
+        //     },
+        //     {
+        //       q: "Do you offer scholarships or financial aid?",
+        //       a: "We believe every child deserves access to quality STEM education. We offer limited scholarships and financial aid based on need and availability. Contact us to learn more about our financial assistance programs."
+        //     },
+        //     {
+        //       q: "What is your cancellation policy?",
+        //       a: "We offer flexible cancellation policies. For after-school programs, we require 30 days notice. For summer camps, cancellations made 14 days before start receive a full refund minus a $50 processing fee. For private tutoring, 24 hours' notice is required for cancellations or rescheduling."
+        //     }
+        //   ]
+        // },
         {
           title: "Private Tutoring - Scheduling",
           icon: "📅",
