links added to the quick links buttons

--- a/faq.html
+++ b/faq.html
@@ -386,9 +386,9 @@
       <div class="max-w-7xl" style="margin: 0 auto;">
         <h2>QUICK LINKS</h2>
         <div class="quick-links-buttons">
-          <a href="#courses" class="btn btn-primary">View All Courses</a>
-          <a href="#enroll" class="btn btn-secondary">Enroll Now</a>
-          <a href="#about" class="btn btn-tertiary">About Us</a>
+          <a href="https://www.beathinkr.com/courses/art" target="_blank" class="btn btn-primary">View All Courses</a>
+          <a href="https://www.beathinkr.com/request/parents" target="_blank" class="btn btn-secondary">Enroll Now</a>
+          <a href="https://www.beathinkr.com/about" target="_blank" class="btn btn-tertiary">About Us</a>
         </div>
       </div>
     </section>
